--- a/VideosDemo/Views/Home/Contact.cshtml
+++ b/VideosDemo/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
+    Infiniti Loop Drive<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:newhoopsdynasty@gmail.com">Ailun Shen</a><br />
 </address>
