Fixed the error that required a different model to be parsed. Adding a checking account model, checking account view.

--- a/VideosDemo/Views/Shared/_Layout.cshtml
+++ b/VideosDemo/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@model VideosDemo.ViewModels.RandomMovieViewModel
+﻿
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,6 +12,10 @@
 <body>
     @Html.Partial("_NavBar")
     <div class="container body-content">
+        <div class="col-md-12">
+
+            <img src="~/Images/Samplelogo.jpg" height="230" class="img-responsive center-block" /> 
+        </div>
         @RenderBody()
         <hr />
         <footer>
