--- a/VideosDemo/Views/Home/Index.cshtml
+++ b/VideosDemo/Views/Home/Index.cshtml
@@ -1,12 +1,40 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@model VideosDemo.Models.CheckingAccount
+<div class="row">
+    <div class="col-md-6">
+        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
+        <span class="glyphicon glyphicon-circle-arrow-down"></span> 
+            Withdrawal
+        </a>
 
-<div class="jumbotron">
-    <h1>Middle Valley Community Bank</h1>
-    <h2>Hello World!</h2>
-    <p class="lead">Middle Valley Community Bank offers the first-ever-web-based ATM. GIve it a try today!</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Powered by ASP.NET &raquo;</a></p>
+        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
+            <span class="glyphicon glyphicon-flash"></span>
+            Quick Cash($100)
+        </a>
+
+        <a href="@Url.Action("Details", "CheckingAccount")" class="btn btn-primary btn-lg btn-block margin-top-20">
+            <span class="glyphicon glyphicon-question-sign"></span>
+            Balance Inquiry
+        </a>
+    </div>
+    <div class="col-md-6">
+        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
+            <span class="glyphicon glyphicon-print"></span>
+            Print Statement
+        </a>
+
+        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
+            <span class="glyphicon glyphicon-transfer"></span>
+            Transfer Funds
+        </a>
+
+        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
+            <span class="glyphicon glyphicon-circle-arrow-up"></span>
+            Deposit
+        </a>
+    </div>
 </div>
 
 <div class="row">
