Added A Transaction Model. With a new Deposit View. Moved the main ATM function to Checking Account Index.

--- a/VideosDemo/Views/Home/Index.cshtml
+++ b/VideosDemo/Views/Home/Index.cshtml
@@ -2,46 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 @model VideosDemo.Models.CheckingAccount
-<div class="row">
-    <div class="col-md-6">
-        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
-        <span class="glyphicon glyphicon-circle-arrow-down"></span> 
-            Withdrawal
-        </a>
 
-        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
-            <span class="glyphicon glyphicon-flash"></span>
-            Quick Cash($100)
-        </a>
-
-        <a href="@Url.Action("Details", "CheckingAccount")" class="btn btn-primary btn-lg btn-block margin-top-20">
-            <span class="glyphicon glyphicon-question-sign"></span>
-            Balance Inquiry
-        </a>
-    </div>
-    <div class="col-md-6">
-        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
-            <span class="glyphicon glyphicon-print"></span>
-            Print Statement
-        </a>
-
-        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
-            <span class="glyphicon glyphicon-transfer"></span>
-            Transfer Funds
-        </a>
-
-        <a href="#" class="btn btn-primary btn-lg btn-block margin-top-20">
-            <span class="glyphicon glyphicon-circle-arrow-up"></span>
-            Deposit
-        </a>
-    </div>
+<div class="jumbotron">
+    <h2>My Home Page</h2>
 </div>
-
 <div class="row">
     <div class="col-md-4">
-        <h2>Middle Valley Community Bank</h2>
+        <h2>Welcome to my HomePage!</h2>
         <p class="lead">
-            First ever web based ATM powered by ATM.NET
+            This site contains the First ever web based ATM powered by ATM.NET
         </p>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
