--- a/VideosDemo/Views/Home/Index.cshtml
+++ b/VideosDemo/Views/Home/Index.cshtml
@@ -23,6 +23,13 @@
     <div class="col-md-4">
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo; Below is a facebook like button</a></p>
+        
+        <div class="fb-like col-md-4"
+             data-share="true"
+             data-width="450"
+             data-show-faces="true">
+        </div>
     </div>
+    
 </div>
