--- a/VideosDemo/Views/Shared/_Layout.cshtml
+++ b/VideosDemo/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
              <div>@Request.Browser.Browser is a terrible browser.</div>
             }
             else{
-                <div>You are using @Request.Browser.Browser, that's a good browser!</div>
+                <div>You are using @Request.Browser.Browser, that's a good browser! Sample Edit.</div>
             }
             <p>&copy; @DateTime.Now.Year - Vidly</p>
         </footer>
