--- a/VideosDemo/Views/Shared/_NavBar.cshtml
+++ b/VideosDemo/Views/Shared/_NavBar.cshtml
@@ -16,6 +16,7 @@
                 <li>@Html.ActionLink("Bank", "Index", "CheckingAccount")</li>
                 <li>@Html.ActionLink("Customers", "Contact", "Home")</li>
                 <li>@Html.ActionLink("Movies", "Random", "Movies")</li>
+                <li>Editing test</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
