Test Commit on new machine

--- a/VideosDemo/Views/Home/Index.cshtml
+++ b/VideosDemo/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
         <h2>Welcome to my HomePage!</h2>
         <p class="lead">
             This site contains the First ever web based ATM powered by ATM.NET
+            Quick Sample commit on a new machine test
         </p>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
