Removed some filler test text from last time

--- a/VideosDemo/Views/Shared/_Layout.cshtml
+++ b/VideosDemo/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
              <div>@Request.Browser.Browser is a terrible browser.</div>
             }
             else{
-                <div>You are using @Request.Browser.Browser, that's a good browser! Sample Edit.</div>
+                <div>You are using @Request.Browser.Browser, that's a good browser!</div>
             }
             <p>&copy; @DateTime.Now.Year - Vidly</p>
         </footer>
